feat: me endpoint with permission based directive MMLCE-6 MMLCE-5